[gd_scene load_steps=2 format=3 uid="uid://b2topbm4ee1f4"]

[ext_resource type="Script" path="res://Interface/victory_screen.gd" id="1_6skle"]

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6skle")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.237539, 0.237539, 0.237539, 0.427451)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VictoryLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Player 1 a gagn√© !"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="EmptyLabel" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
uppercase = true

[node name="Restart" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Recommencer"

[node name="Home" type="Button" parent="VBoxContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Menu"

[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/Home" to="." method="_on_home_pressed"]
